[gd_scene load_steps=2 format=2]

[ext_resource path="res://TouchControls/TouchControls.gd" type="Script" id=1]

[node name="TouchControls" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="HBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0
action_mode = 0
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 96.0
margin_bottom = 20.0
text = "RIGHT"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -37.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inc" type="Button" parent="VBoxContainer"]
margin_top = 556.0
margin_right = 37.0
margin_bottom = 576.0
text = "INC"

[node name="Dec" type="Button" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 37.0
margin_bottom = 600.0
text = "DEC"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="HBoxContainer/Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="HBoxContainer/Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="HBoxContainer/Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="HBoxContainer/Right" to="." method="_on_Right_button_up"]
[connection signal="button_down" from="VBoxContainer/Inc" to="." method="_on_Inc_button_down"]
[connection signal="button_up" from="VBoxContainer/Inc" to="." method="_on_Inc_button_up"]
[connection signal="button_down" from="VBoxContainer/Dec" to="." method="_on_Dec_button_down"]
[connection signal="button_up" from="VBoxContainer/Dec" to="." method="_on_Dec_button_up"]
